# jamemy

./: .gitmodules  README.md
irc_bot/: .gitignore  CMakeLists.txt  README.md  main.cpp
irc_bot/IrcBot/: config.json
irc_bot/IrcBot/src/: App.cpp  App.hpp  Config.cpp  Config.hpp  KarmaSystem.cpp  KarmaSystem.hpp  PoorchatClient.cpp  PoorchatClient.hpp  SMTPClient.cpp  SMTPClient.hpp  Socket.hpp  irc_main.cpp  main.cpp
irc_bot/IrcBot/src/Database/: Database.cpp  Database.hpp  Types.hpp
irc_bot/IrcBot/src/Database/Model/: Author.hpp  Meme.hpp
irc_bot/IrcBot/src/IRC/: PoorchatClient.cpp  PoorchatClient.hpp  PoorchatClientV2.cpp  PoorchatClientV2.hpp  Socket.cpp
irc_bot/src/: main.cpp
web/: app.js  package-lock.json  package.json
web/api/: api_test.rest  app.js  config.json  data-scraper.js  package-lock.json  package.json
web/spa/: README.md  package-lock.json  package.json
web/spa/public/: index.html
web/spa/src/: App.vue  main.css  main.js
web/spa/src/api/: MemeApi.js  base.js
web/spa/src/components/: Footer.vue  Link.vue  Main.vue
web/views/: page.ejs
